fix z-index issues

--- a/src/assets/css/cmps/email-folders.css
+++ b/src/assets/css/cmps/email-folders.css
@@ -114,7 +114,7 @@
         position: fixed;
         height: 100%;
         width: 100%;
-        z-index: 5;
+        z-index: 20;
         background-color: rgba(0, 0, 0, 0.2);
         display: none;
     }
