--- a/src/assets/css/pages/email-compose.css
+++ b/src/assets/css/pages/email-compose.css
@@ -5,7 +5,7 @@
     height: 100%;
     width: 100%;
     background-color: white;
-    z-index: 4;
+    z-index: 30;
 }
 
 .email-compose {
@@ -113,7 +113,6 @@ textarea:focus {
         background-color: transparent;
         bottom: 0;
         right: 30px;
-        z-index: 2;
         width: 600px;
         height: 57%;
     }
